fix avatar & footer alignments

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,23 @@ body {
   box-shadow: 5px 5px 30px 5px #dbe3ea; }
   .testimonial-card:first-child {
     grid-column: 1 / 3;
-    background-color: #7541c8; }
+    background-color: #7541c8;
+    position: relative; }
+    .testimonial-card:first-child .avatar {
+      border-color: rgba(184, 155, 230, 0.5); }
+  .testimonial-card:first-child::before {
+    content: "";
+    display: block;
+    background-image: url("imagesg-pattern-quotation.svg");
+    background-position: top right;
+    background-color: grey;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px; }
   .testimonial-card:nth-child(2) {
     background-color: #48556a; }
     .testimonial-card:nth-child(2) .avatar {
-      border-width: 2px;
       border-color: #7541c8; }
   .testimonial-card:first-child, .testimonial-card:nth-child(2), .testimonial-card:nth-child(4) {
     color: white; }
@@ -44,17 +56,21 @@ body {
   .testimonial-card:nth-child(3), .testimonial-card:last-child {
     background-color: #fafafa;
     color: #48556a; }
+    .testimonial-card:nth-child(3) .avatar, .testimonial-card:last-child .avatar {
+      border-color: white; }
   .testimonial-card:nth-child(4) {
     grid-column: -4 / -2;
     background-color: #19212e; }
+    .testimonial-card:nth-child(4) .avatar {
+      border-color: #7541c8; }
   .testimonial-card__header {
     display: flex;
-    gap: 1.8rem;
+    gap: 1.4rem;
     align-items: center;
     margin-bottom: 1.2rem; }
     .testimonial-card__header__img-wrapper .avatar {
       display: block;
-      max-width: 3.6rem;
+      max-width: 2.8rem;
       border-radius: 100px;
       border: 2px solid #cfcfcf; }
     .testimonial-card__header__info {
@@ -78,7 +94,7 @@ body {
     font-size: 1.4rem;
     line-height: 1.6; }
   .testimonial-card__body__review--light {
-    color: #48556a; }
+    color: rgba(72, 85, 106, 0.5); }
 
 .attribution {
   font-size: 11px;
@@ -90,3 +106,19 @@ body {
 
 .attribution a {
   color: #3e52a3; }
+
+@media (max-width: 375px) {
+  body {
+    padding: 2rem;
+    gap: 2rem; }
+  .main {
+    grid-template-columns: 1fr; }
+  .testimonial-card:first-child {
+    grid-column: auto; }
+  .testimonial-card:last-child {
+    grid-column: auto;
+    grid-row: auto; }
+  .testimonial-card:nth-child(4) {
+    grid-column: auto; }
+  .attribution {
+    position: relative; } }
