--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,12 +46,28 @@ body {
   &:first-child {
     grid-column: 1 / 3;
     background-color: $moderate-violet;
+    position: relative;
+
+    .avatar {
+      border-color: rgba(184, 155, 230, 0.5);
+    }
+  }
+
+  &:first-child::before {
+    content: "";
+    display: block;
+    background-image: url("images\bg-pattern-quotation.svg");
+    background-position: top right;
+    background-color: grey;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px;
   }
 
   &:nth-child(2) {
     background-color: $very-dark-grayish-blue;
     .avatar {
-      border-width: 2px;
       border-color: $moderate-violet;
     }
   }
@@ -71,23 +87,31 @@ body {
   &:last-child {
     background-color: $white-light;
     color: $very-dark-grayish-blue;
+
+    .avatar {
+      border-color: $white;
+    }
   }
 
   &:nth-child(4) {
     grid-column: -4 / -2;
     background-color: $very-dark-blackish-blue;
+
+    .avatar {
+      border-color: $moderate-violet;
+    }
   }
 
   &__header {
     display: flex;
-    gap: 1.8rem;
+    gap: 1.4rem;
     align-items: center;
     margin-bottom: 1.2rem;
 
     &__img-wrapper {
       .avatar {
         display: block;
-        max-width: 3.6rem;
+        max-width: 2.8rem;
         border-radius: 100px;
         border: 2px solid $light-gray;
       }
@@ -125,7 +149,7 @@ body {
       line-height: 1.6;
     }
     &__review--light {
-      color: $very-dark-grayish-blue;
+      color: rgba($very-dark-grayish-blue, 0.5);
     }
   }
 }
@@ -140,4 +164,33 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media (max-width: 375px) {
+  body {
+    padding: 2rem;
+    gap: 2rem;
+  }
+  .main {
+    grid-template-columns: 1fr;
+  }
+
+  .testimonial-card {
+    &:first-child {
+      grid-column: auto;
+    }
+
+    &:last-child {
+      grid-column: auto;
+      grid-row: auto;
+    }
+
+    &:nth-child(4) {
+      grid-column: auto;
+    }
+  }
+
+  .attribution {
+    position: relative;
+  }
 }
